tests/ui/lifetimes/lifetime-errors/ex2a-push-one-existing-name.stderr
error[E0621]: explicit lifetime required in the type of `y`
  --> $DIR/ex2a-push-one-existing-name.rs:6:5
   |
LL |     x.push(y);
   |     ^^^^^^^^^ lifetime `'a` required
   |
help: add explicit lifetime `'a` to the type of `y`
   |
LL | fn foo<'a>(x: &mut Vec<Ref<'a, i32>>, y: Ref<'a, i32>) {
   |                                              +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0621`.
